# rex_game

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
backend/: .gitignore  Cargo.toml
backend/.claude/: settings.local.json
backend/application/: Cargo.toml
backend/application/src/: lib.rs  page_list_dto.rs
backend/application/src/errors/: application_error.rs
backend/application/src/flashcard_types/: flashcard_type_creation_dto.rs  flashcard_type_dto.rs  flashcard_type_updation_dto.rs  flashcard_type_usecase.rs  flashcard_type_usecase_trait.rs  mod.rs
backend/application/src/flashcards/: flashcard_creation_dto.rs  flashcard_detail_dto.rs  flashcard_dto.rs  flashcard_file_dto.rs  flashcard_updation_dto.rs  flashcard_usecase.rs  flashcard_usecase_trait.rs  mod.rs  t_flashcard_usecase.rs
backend/application/src/identities/: application_user_dto.rs  identity_authenticate_usecase.rs  identity_authenticate_usecase_trait.rs  identity_authorize_usecase.rs  identity_authorize_usecase_trait.rs  identity_login_usecase.rs  identity_login_usecase_trait.rs  identity_user_token_usecase.rs  identity_user_token_usecase_trait.rs  identity_user_trait.rs  identity_user_usecase.rs  identity_user_usecase_trait.rs  login_claims.rs  mod.rs  user_creation_dto.rs  user_token_dto.rs
backend/application/src/mail_templates/: mail_template_creation_dto.rs  mail_template_deletion_dto.rs  mail_template_dto.rs  mail_template_updation_dto.rs  mail_template_usecase.rs  mail_template_usecase_trait.rs  mod.rs
backend/application/src/permissions/: mod.rs  permission_creation_dto.rs  permission_deletion_dto.rs  permission_dto.rs  permission_updation_dto.rs  permission_usecase.rs  permission_usecase_trait.rs
backend/application/src/roles/: mod.rs  role_deletion_dto.rs  role_dto.rs  role_updation_dto.rs  role_usecase.rs  role_usecase_trait.rs
backend/application/src/users/: loggedin_user_dto.rs  mod.rs  role_permission_creation_dto.rs  role_permission_dto.rs  roles.rs  user_creation_dto.rs  user_deletion_dto.rs  user_login_parameter.rs  user_permission_creation_dto.rs  user_permission_dto.rs  user_role_creation_dto.rs  user_role_dto.rs  user_statuses.rs  user_updation_dto.rs  user_usecase.rs  user_usecase_trait.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  mod.rs  repository.rs  transaction_manager_trait.rs
backend/domain/src/entities/: flashcard.rs  flashcard_file.rs  flashcard_type.rs  flashcard_type_relation.rs  mod.rs  page_list.rs  prelude.rs  role.rs  user.rs  user_role.rs
backend/domain/src/errors/: domain_error.rs
backend/domain/src/flashcards/: flashcard.rs  flashcard_repository_trait.rs  mod.rs  prelude.rs  t_flashcard_repository.rs
backend/domain/src/helpers/: configuration_helper_trait.rs  email_helper_trait.rs  file_helper_trait.rs  mod.rs
backend/domain/src/identities/: mod.rs  password_hasher_trait.rs  token_helper_trait.rs
backend/domain/src/models/: flashcard_file_model.rs  flashcard_model.rs  flashcard_type_model.rs  flashcard_type_relation_model.rs  mod.rs  page_list_model.rs  permission_model.rs  role_model.rs  role_permission_model.rs  user_model.rs  user_permission_model.rs  user_role_model.rs
backend/domain/src/repositories/: flashcard_file_repository_trait.rs  flashcard_repository_trait.rs  flashcard_type_relation_repository_trait.rs  flashcard_type_repository_trait.rs  mail_template_repository_trait.rs  mod.rs  permission_repository_trait.rs  role_permission_repository_trait.rs  role_repository_trait.rs  user_permission_repository_trait.rs  user_repository_trait.rs  user_role_repository_trait.rs  user_token_repository_trait.rs
backend/entities/: Cargo.toml
backend/entities/src/entities/: achievement.rs  flashcard.rs  flashcard_file.rs  flashcard_type.rs  flashcard_type_relation.rs  game_session.rs  game_type.rs  game_type_flashcard.rs  mail_template.rs  mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  system_settings.rs  user.rs  user_achievement.rs  user_game_progress.rs  user_permission.rs  user_role.rs  user_stats.rs  user_token.rs
backend/environments/: .env.example
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/: lib.rs  seaorm_connection.rs  transaction_manager.rs
backend/infrastructure/src/entities/: flashcard.rs  flashcard_file.rs  (+10 more)
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_flashcard_table.rs  m20220101_000001_create_table.rs  m20220101_000001_initial.rs  m20250211_171706_add_user_table.rs  m20250306_182824_integrate_table_audits.rs  m20250309_070137_add_role.rs  m20250309_074937_seeding_default_role.rs  m20250623_174418_add_permission.rs  m20250630_171738_seeding_default_permission.rs  m20250817_075950_add_user_token.rs  m20250819_164038_add_mail_template.rs  m20250903_173631_seeding_email_templates.rs  m20260101_190000_add_system_settings.rs  m20260118_100000_add_scoring_system.rs  m20260118_100001_seed_game_types.rs  m20260118_100002_seed_achievements.rs  m20260123_100000_add_user_game_progress.rs  m20260211_100000_add_game_type_flashcard.rs  m20260211_100001_seed_flashcard_types.rs
backend/modules/games/: Cargo.toml
backend/modules/identity/: Cargo.toml
backend/modules/mail_templates/: Cargo.toml
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared_kernel/: Cargo.toml
backend/shared_kernel/src/: lib.rs
backend/src/: app_state.rs  config.prod.toml  config.toml  main.rs  startup.rs
backend/src/handlers/: authentication_handler.rs  flashcard_handler.rs  flashcard_type_handler.rs  game_admin_handler.rs  health_handler.rs  mail_template_handler.rs  mod.rs  permission_handler.rs  role_handler.rs  scoring_handler.rs  setup_handler.rs  user_handler.rs
backend/src/helpers/: http_helper.rs
backend/src/middlewares/: auth_middleware.rs  authenticate_middleware.rs  authorize_middleware.rs  error_handler_middleware.rs  mod.rs  permission_middleware.rs  rate_limit_middleware.rs
backend/src/routings/: app_routing.rs  mod.rs
backend/src/validators/: mod.rs  validation_helper.rs
backend/src/view_models/: mod.rs
(+466 files in other folders)
