[package]
name = "rex_game"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.4"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
chrono = "0.4.38"
time = "0.3.41"
axum-macros = "0.4.2"
hyper = { version = "1.0", features = [] }
tower-http = { version = "0.6.1", features = ["cors"] }
tower = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
rex-game-domain = { path = "./domain" }
rex-game-infrastructure = { path = "./infrastructure" }
rex-game-application = { path = "./application" }
rex-game-migration = { path = "./migration" }
rex-game-shared = { path = "./shared" }
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
axum-extra = { version = "0.10.0", features = ["cookie"] }

[dependencies.sea-orm]
version = "1.1.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]

[workspace]
members = [
    ".",
    "application",
    "domain",
    "infrastructure",
    "migration",
    "shared",
]
