[package]
name = "rex-game-infrastructure"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
rex-game-domain = { path = "../domain" }

[dependencies.sea-orm]
version = "1.1.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]
