[package]
name = "rex-game-infrastructure"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
oauth2 = "5.0.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
config = "0.15.4"
rex-game-domain = { path = "../domain" }

[dependencies.sea-orm]
version = "1.1.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]
