[package]
name = "rex-game-infrastructure"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
time = "0.3.41"
oauth2 = "5.0.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.15.4"
mail-send = "0.5.1"
ammonia = "4.1.1"
html2text = "0.15.3"
infer = "0.19.0"

rex-game-domain = { path = "../domain" }
rex-game-shared = { path = "../shared" }

[dependencies.sea-orm]
version = "2.0.0-rc.22"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = ["v4"]
