[package]
name = "rex-game-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
rex-game-shared = { path = "../shared" }
rex-game-entities = { path = "../entities" }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.28"
features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "with-chrono",
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
