[package]
name = "rex-game-shared"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
time = "0.3.41"
oauth2 = "5.0.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# config = "0.15.4"  # Removed - using dotenvy for .env based config
mail-send = "0.5.1"
ammonia = "4.1.1"
html2text = "0.15.3"
infer = "0.19.0"
lettre = "0.11.12"
async-trait = "0.1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
once_cell = "1.19"

[dependencies.sea-orm]
version = "2.0.0-rc.28"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
]

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]
