[package]
name = "rex-game-games"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rex-game-shared = { path = "../../shared" }
rex-game-entities = { path = "../../entities" }
async-trait = "0.1"
chrono = "0.4.38"
rust_decimal = "1.33"
sea-orm = { version = "2.0.0-rc.28", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
