[package]
name = "rex-game-identity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rex-game-shared = { path = "../../shared" }
rex-game-entities = { path = "../../entities" }
chrono = "0.4.38"
sea-orm = { version = "2.0.0-rc.28", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
